# CosmoHubitatPlugin

./: pyproject.toml
src/cosmohubitatplugin/: __init__.py  client.py  cosmo.json  driver.py  misc.py  utility.py
src/cosmohubitatplugin/data/: hubitat_capabilities.json
